--- a/marketplace_project/reviews/templates/reviews/review_form.html
+++ b/marketplace_project/reviews/templates/reviews/review_form.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<form
+    method="post"
+    hx-post="{% url 'review-create' product.pk %}"
+    hx-target="#reviews"
+    hx-swap="beforeend">
 
-</body>
-</html>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Надіслати відгук</button>
+</form>
+<div id="reviews">
+    {% for review in product.reviews.all %}
+        <div class="review">
+            <strong>{{ review.reviewer.username }}</strong>
+            <span>Оцінка: {{ review.rating }} ★</span>
+            <p>{{ review.comment }}</p>
+        </div>
+    {% endfor %}
+</div>
