--- a/marketplace_project/templates/navbar.html
+++ b/marketplace_project/templates/navbar.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<nav>
+    <a href="{% url 'product-list' %}">Головна</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'cart' %}">Кошик</a>
+        <a href="{% url 'order-list' %}">Замовлення</a>
+        <a href="{% url 'profile' user.pk %}">Профіль</a>
+        <a href="{% url 'logout' %}">Вийти</a>
+    {% else %}
+        <a href="{% url 'login' %}">Увійти</a>
+        <a href="{% url 'register' %}">Реєстрація</a>
+    {% endif %}
+</nav>
