--- a/marketplace_project/templates/base.html
+++ b/marketplace_project/templates/base.html
@@ -1,19 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Marketplace{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
 </head>
 <body>
     {% include 'navbar.html' %}
-
     <div class="container">
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
     </div>
 </body>
 </html>
