--- a/marketplace_project/templates/navbar.html
+++ b/marketplace_project/templates/navbar.html
@@ -1,12 +1,18 @@
 <nav>
-    <a href="{% url 'product-list' %}">Головна</a>
-    {% if user.is_authenticated %}
-        <a href="{% url 'cart' %}">Кошик</a>
-        <a href="{% url 'order-list' %}">Замовлення</a>
-        <a href="{% url 'profile' user.pk %}">Профіль</a>
-        <a href="{% url 'logout' %}">Вийти</a>
-    {% else %}
-        <a href="{% url 'login' %}">Увійти</a>
-        <a href="{% url 'register' %}">Реєстрація</a>
-    {% endif %}
+  <a href="{% url 'home' %}">Головна</a>
+  <a href="{% url 'product-list' %}">Товари</a>
+
+  {% if user.is_authenticated %}
+    <a href="{% url 'product-add' %}"> Створити товар</a>
+    <a href="{% url 'cart' %}">Кошик</a>
+    <a href="{% url 'order-list' %}">Замовлення</a>
+    <a href="{% url 'profile' user.pk %}">Профіль</a>
+<form action="{% url 'logout' %}" method="post" style="display: inline;">
+    {% csrf_token %}
+    <button type="submit">Вийти</button>
+</form>
+  {% else %}
+    <a href="{% url 'login' %}">Увійти</a>
+    <a href="{% url 'register' %}">Реєстрація</a>
+  {% endif %}
 </nav>
