--- a/marketplace_project/users/templates/users/register.html
+++ b/marketplace_project/users/templates/users/register.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Реєстрація{% endblock %}
 
-</body>
-</html>
+{% block content %}
+<h1>Реєстрація</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Зареєструватись</button>
+</form>
+{% endblock %}
