--- a/marketplace_project/templates/base.html
+++ b/marketplace_project/templates/base.html
@@ -1,15 +1,18 @@
-{% load static %}
+{% load static i18n %}
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Marketplace{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
 </head>
 <body>
     {% include 'navbar.html' %}
-    <div class="container">
+
+    <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
 </body>
