--- a/marketplace_project/templates/navbar.html
+++ b/marketplace_project/templates/navbar.html
@@ -1,18 +1,25 @@
+{% load static %}
+{% load custom_tags %}
+
 <nav>
-  <a href="{% url 'home' %}">Головна</a>
-  <a href="{% url 'product-list' %}">Товари</a>
+  <a href="{% url 'home' %}" class="{% if request.path == '/' %}active{% endif %}">Головна</a>
+  <a href="{% url 'product-list' %}" class="{% if request.path|startswith:'/products' %}active{% endif %}">Товари</a>
 
   {% if user.is_authenticated %}
-    <a href="{% url 'product-add' %}"> Створити товар</a>
-    <a href="{% url 'cart' %}">Кошик</a>
-    <a href="{% url 'order-list' %}">Замовлення</a>
-    <a href="{% url 'profile' user.pk %}">Профіль</a>
-<form action="{% url 'logout' %}" method="post" style="display: inline;">
-    {% csrf_token %}
-    <button type="submit">Вийти</button>
-</form>
+    {% if user.role == "is_seller" %}
+      <a href="{% url 'product-add' %}" class="{% if request.path == '/products/product/add/' %}active{% endif %}">Створити товар</a>
+    {% endif %}
+
+    <a href="{% url 'cart' %}" class="{% if request.path == '/orders/cart/' %}active{% endif %}">Кошик</a>
+    <a href="{% url 'order-list' %}" class="{% if request.path == '/orders/' %}active{% endif %}">Замовлення</a>
+    <a href="{% url 'profile' user.pk %}" class="{% if request.path == '/users/profile/'|add:user.pk|stringformat:"s" %}active{% endif %}">Профіль</a>
+
+    <form action="{% url 'logout' %}" method="post" class="logout-form">
+        {% csrf_token %}
+        <button type="submit">Вийти</button>
+    </form>
   {% else %}
-    <a href="{% url 'login' %}">Увійти</a>
-    <a href="{% url 'register' %}">Реєстрація</a>
+    <a href="{% url 'login' %}" class="{% if request.path == '/users/login/' %}active{% endif %}">Увійти</a>
+    <a href="{% url 'register' %}" class="{% if request.path == '/users/register/' %}active{% endif %}">Реєстрація</a>
   {% endif %}
 </nav>
