--- a/marketplace_project/templates/navbar.html
+++ b/marketplace_project/templates/navbar.html
@@ -1,25 +1,51 @@
 {% load static %}
 {% load custom_tags %}
 
-<nav>
-  <a href="{% url 'home' %}" class="{% if request.path == '/' %}active{% endif %}">Головна</a>
-  <a href="{% url 'product-list' %}" class="{% if request.path|startswith:'/products' %}active{% endif %}">Товари</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="{% url 'home' %}">Marketplace</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  {% if user.is_authenticated %}
-    {% if user.role == "is_seller" %}
-      <a href="{% url 'product-add' %}" class="{% if request.path == '/products/product/add/' %}active{% endif %}">Створити товар</a>
-    {% endif %}
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Головна</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.path|startswith:'/products' %}active{% endif %}" href="{% url 'product-list' %}">Товари</a>
+        </li>
 
-    <a href="{% url 'cart' %}" class="{% if request.path == '/orders/cart/' %}active{% endif %}">Кошик</a>
-    <a href="{% url 'order-list' %}" class="{% if request.path == '/orders/' %}active{% endif %}">Замовлення</a>
-    <a href="{% url 'profile' user.pk %}" class="{% if request.path == '/users/profile/'|add:user.pk|stringformat:"s" %}active{% endif %}">Профіль</a>
+        {% if user.is_authenticated %}
+          {% if user.role == "is_seller" %}
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == '/products/product/add/' %}active{% endif %}" href="{% url 'product-add' %}">Створити товар</a>
+          </li>
+          {% endif %}
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == '/orders/cart/' %}active{% endif %}" href="{% url 'cart' %}">Кошик</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == '/orders/' %}active{% endif %}" href="{% url 'order-list' %}">Замовлення</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == '/users/profile/'|add:user.pk|stringformat:"s" %}active{% endif %}" href="{% url 'profile' user.pk %}">Профіль</a>
+          </li>
+        {% endif %}
+      </ul>
 
-    <form action="{% url 'logout' %}" method="post" class="logout-form">
-        {% csrf_token %}
-        <button type="submit">Вийти</button>
-    </form>
-  {% else %}
-    <a href="{% url 'login' %}" class="{% if request.path == '/users/login/' %}active{% endif %}">Увійти</a>
-    <a href="{% url 'register' %}" class="{% if request.path == '/users/register/' %}active{% endif %}">Реєстрація</a>
-  {% endif %}
+      {% if user.is_authenticated %}
+      <form action="{% url 'logout' %}" method="post" class="d-flex">
+          {% csrf_token %}
+          <button class="btn btn-outline-danger" type="submit">Вийти</button>
+      </form>
+      {% else %}
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link {% if request.path == '/users/login/' %}active{% endif %}" href="{% url 'login' %}">Увійти</a></li>
+        <li class="nav-item"><a class="nav-link {% if request.path == '/users/register/' %}active{% endif %}" href="{% url 'register' %}">Реєстрація</a></li>
+      </ul>
+      {% endif %}
+    </div>
+  </div>
 </nav>
