--- a/marketplace_project/users/templates/users/login.html
+++ b/marketplace_project/users/templates/users/login.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 {% block title %}Увійти{% endblock %}
-
 {% block content %}
-<h1>Вхід</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Увійти</button>
-</form>
+<div class="row justify-content-center">
+  <div class="col-md-5">
+    <h2 class="mb-3">Вхід</h2>
+    <form method="post" class="p-4 border rounded bg-light shadow-sm">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary w-100">Увійти</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
