--- a/marketplace_project/users/templates/users/register.html
+++ b/marketplace_project/users/templates/users/register.html
@@ -1,38 +1,14 @@
 {% extends 'base.html' %}
 {% block title %}Реєстрація{% endblock %}
-
 {% block content %}
-<div class="container mt-4">
-    <h1 class="mb-3">Реєстрація</h1>
-    <form method="post">
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <h2 class="mb-3">Реєстрація</h2>
+    <form method="post" class="p-4 border rounded bg-light shadow-sm">
         {% csrf_token %}
-
-        <div class="mb-3">
-            {{ form.username.label_tag }}
-            {{ form.username }}
-        </div>
-
-        <div class="mb-3">
-            {{ form.email.label_tag }}
-            {{ form.email }}
-        </div>
-
-        <div class="mb-3">
-            {{ form.password1.label_tag }}
-            {{ form.password1 }}
-        </div>
-
-        <div class="mb-3">
-            {{ form.password2.label_tag }}
-            {{ form.password2 }}
-        </div>
-
-        <div class="mb-3">
-            {{ form.role.label_tag }}
-            {{ form.role }}
-        </div>
-
-        <button type="submit" class="btn btn-primary">Зареєструватись</button>
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-success w-100">Зареєструватись</button>
     </form>
+  </div>
 </div>
 {% endblock %}
