--- a/marketplace_project/users/templates/users/profile.html
+++ b/marketplace_project/users/templates/users/profile.html
@@ -1,18 +1,22 @@
 {% extends 'base.html' %}
 {% block title %}Профіль{% endblock %}
-
 {% block content %}
-<h1>Профіль користувача {{ user_obj.username }}</h1>
-
-{% if user_obj.avatar %}
-    <img src="{{ user_obj.avatar.url }}" width="100">
-{% endif %}
-
-<p>Ім'я магазину: {{ user_obj.store_name }}</p>
-<p>Опис: {{ user_obj.bio }}</p>
-<p>Платіжна інформація: {{ user_obj.payment_info }}</p>
-
-{% if user == user_obj %}
-    <a href="{% url 'profile-edit' %}">Редагувати</a>
-{% endif %}
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h2 class="card-title mb-3">Профіль користувача {{ user_obj.username }}</h2>
+        {% if user_obj.avatar %}
+          <img src="{{ user_obj.avatar.url }}" class="img-thumbnail mb-3" width="120">
+        {% endif %}
+        <p><strong>Ім'я магазину:</strong> {{ user_obj.store_name }}</p>
+        <p><strong>Опис:</strong> {{ user_obj.bio }}</p>
+        <p><strong>Платіжна інформація:</strong> {{ user_obj.payment_info }}</p>
+        {% if user == user_obj %}
+          <a href="{% url 'profile-edit' %}" class="btn btn-warning mt-2">Редагувати</a>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
