--- a/marketplace_project/products/templates/products/product_detail.html
+++ b/marketplace_project/products/templates/products/product_detail.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block title %}{{ product.title }}{% endblock %}
-
 {% block content %}
 <div class="card mb-4 shadow">
   {% if product.image %}
@@ -15,17 +13,10 @@
     <p class="card-text"><strong>{{ product.price }} грн</strong></p>
     <p>Рейтинг: {{ average_rating }}</p>
 
-<form
-    method="post"
-    hx-post="{% url 'add-to-cart' product.pk %}"
-    hx-target="#cart-button-{{ product.pk }}"
-    hx-swap="outerHTML">
-    {% csrf_token %}
-    <button id="cart-button-{{ product.pk }}" type="submit" class="btn btn-primary mb-2">
-        Додати в кошик
-    </button>
-</form>
-
+    <form method="post" hx-post="{% url 'add-to-cart' product.pk %}" hx-target="#cart-button-{{ product.pk }}" hx-swap="outerHTML">
+      {% csrf_token %}
+      <button id="cart-button-{{ product.pk }}" type="submit" class="btn btn-primary mb-2">Додати в кошик</button>
+    </form>
 
     {% if user.is_authenticated and user.is_seller and product.seller == user %}
       <a href="{% url 'product-edit' product.pk %}" class="btn btn-warning">Редагувати</a>
@@ -34,36 +25,14 @@
   </div>
 </div>
 
-<!-- Модальне вікно кошика -->
-<div class="modal fade" id="cartModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Товар додано</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        Товар "{{ product.title }}" додано в кошик.
-      </div>
-      <div class="modal-footer">
-        <a href="{% url 'cart' %}" class="btn btn-success">Перейти в кошик</a>
-        <button class="btn btn-secondary" data-bs-dismiss="modal">Продовжити покупки</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <hr>
 <h3>Відгуки</h3>
-
 {% include 'reviews/review_form.html' with product=product %}
-
 <div id="reviews">
-    {% for review in product.reviews.all %}
-        {% include "reviews/review_item.html" with review=review %}
-    {% empty %}
-        <p>Ще немає відгуків.</p>
-    {% endfor %}
+  {% for review in product.reviews.all %}
+    {% include "reviews/review_item.html" with review=review %}
+  {% empty %}
+    <p>Ще немає відгуків.</p>
+  {% endfor %}
 </div>
-
 {% endblock %}
