--- a/marketplace_project/products/templates/products/product_detail.html
+++ b/marketplace_project/products/templates/products/product_detail.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}{{ product.title }}{% endblock %}
 {% block content %}
+{% load static %}
+
 <div class="card mb-4 shadow">
   {% if product.image %}
     <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
