--- a/marketplace_project/products/templates/products/product_list.html
+++ b/marketplace_project/products/templates/products/product_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Товари{% endblock %}
 {% block content %}
+{% load static %}
+
 <h1 class="mb-4">Товари</h1>
 
 <form method="get" class="mb-4">
